# pyaudiomod

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt
src/: ola_example.py  sigproc.py  time_stretching.py
src/pyaudiomod/: __init__.py  custom.py  main.py  pitch_scaling.py  sigproc.py  time_stretching.py  utils.py
